# serabut

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  PLAN.md  README.md  claude.md  deny.toml
.github/workflows/: security.yml
charts/serabut/: Chart.yaml  values.yaml
charts/serabut/templates/: _helpers.tpl  configmap-dnsmasq.yaml  configmap-squid.yaml  deployment.yaml  network-attachment-definition.yaml  pvc-iso.yaml  pvc-squid.yaml
deploy/: pxe-proxy.service  serabut.conf  serabut.service  serabutd.conf  serabutd.logrotate  serabutd.service
src/: config.rs  error.rs  lib.rs  main.rs  utils.rs
src/capture/: mod.rs  pnet_capture.rs
src/detector/: mod.rs  pxe_detector.rs
src/domain/: dhcp.rs  events.rs  mod.rs  pxe.rs
src/http/: mod.rs  server.rs
src/netboot/: autoinstall.rs  config.rs  manager.rs  mod.rs
src/parser/: dhcp_parser.rs  mod.rs
src/proxydhcp/: mod.rs  server.rs
src/reporter/: console_reporter.rs  mod.rs
src/routes/: action.rs  boot.rs  content.rs  iso.rs  mod.rs  views.rs
src/services/: action.rs  aliases.rs  combine.rs  hardware.rs  iso.rs  mod.rs  template.rs
src/tftp/: mod.rs  server.rs
