[package]
name = "serabutd"
version = "0.1.0"
edition = "2021"
description = "PXE boot server for multiple OSes with multiple configurations"
license = "MIT"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full", "signal"] }
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
minijinja = "2"
thiserror = "2"
chrono = "0.4"
fs2 = "0.4"
serde = { version = "1", features = ["derive"] }
iso9660_simple = "0.2.2"

[dev-dependencies]
tempfile = "3"
