[package]
name = "serabutd"
version = "2.0.0"
edition = "2021"
description = "PXE Boot Manager - serves boot scripts and files from ISO images"
authors = ["TWD Amhore"]
license = "MIT"

[dependencies]
tikv-jemallocator = "0.6"
axum = "0.8"
tokio = { version = "1", features = ["full", "signal"] }
tokio-util = { version = "0.7", features = ["io"] }
minijinja = "2"
futures = "0.3"
bytes = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["trace"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
